--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverstatus-webui",
-  "version": "1.1.3",
+  "version": "1.3.0",
   "description": "It's a simple, clean webui for ServerStatus, built with react and Ant Design",
   "keywords": [
     "ServerStatus",
@@ -12,13 +12,13 @@
   "private": true,
   "homepage": ".",
   "bugs": {
-    "url": "https://github.com/krwu/ServerStatus-web/issues"
+    "url": "https://github.com/flxxyz/ServerStatus-web/issues"
   },
-  "license": "WTFPL",
-  "author": "Kairee <kairee@udev.bid> (https://www.ofcss.com/)",
+  "license": "MIT",
+  "author": "flxxyz <i@mdzz.name> (https://flxxyz.com/)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/krwu/ServerStatus-web.git"
+    "url": "https://github.com/flxxyz/ServerStatus-web.git"
   },
   "dependencies": {
     "@types/jest": "^24.0.0",
@@ -70,12 +70,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "husky": "^4.2.5",
     "semantic-release": "^15.13.24"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   }
 }
